--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,9 @@ dependencies:
   get_it: ^7.6.0
   shared_preferences: ^2.1.1
   http: ^0.13.6
-  intl: ^0.17.0
+  intl: ^0.18.0
+  flutter_localizations:
+    sdk: flutter
   flutter_svg: ^1.0.5
   flutter_svg_provider: ^1.0.3
   rxdart: ^0.27.7
@@ -30,19 +32,32 @@ dependencies:
   xml: ^6.2.2
   flutter_spinkit: ^5.2.0
   animate_do: ^3.0.2
+  analyzer: ^5.13.0
+  bloc: ^8.1.2
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
   flutter_launcher_icons: ^0.13.1
+  build_runner: ^2.4.4
+  
 
 flutter_icons:
   android: "launcher_icon"
   image_path: "dev_assets/logo.png"
-  build_runner:
-  hive_generator: ^1.1.0
-  flutter_lints: ^1.0.0
+  
+flutter_gen:
+  output: lib/l10n/ # Optional (default: lib/gen/)
+
+#   # Optional
+#   integrations:
+#     flutter_svg: true
+#     flare_flutter: true
+#     rive: true
+#     lottie: true
+
 
 flutter:
   generate: true
